# src/main/kotlin/com/example/servicescheduleapp/controller/DriverController.kt
@@ -7,31 +7,32 @@ import org.springframework.http.HttpStatus
 import org.springframework.web.bind.annotation.*
 
 @RestController
+@RequestMapping("/drivers")
 class DriverController {
 
     @Autowired
     lateinit var driverService: DriverService
 
     @ResponseStatus(HttpStatus.OK)
-    @GetMapping("/drivers/available")
+    @GetMapping("/available")
     fun getAvailableDriver(): List<Driver> {
         return driverService.getAvailableDrivers()
     }
 
     @ResponseStatus(HttpStatus.OK)
-    @GetMapping("/drivers")
+    @GetMapping()
     fun getAllDrivers(): List<Driver> {
         return driverService.getAllDrivers()
     }
 
     @ResponseStatus(HttpStatus.OK)
-    @GetMapping("/drivers/{id}")
+    @GetMapping("/{id}")
     fun getDriver(@PathVariable id: Int): Driver {
         return driverService.getDriverById(id)
     }
 
     @ResponseStatus(HttpStatus.OK)
-    @DeleteMapping("/drivers/{id}")
+    @DeleteMapping("/{id}/delete")
     fun deleteDriver(@PathVariable id: Int) {
         driverService.deleteDriverById(id)
     }
